fixed expand icon double click issue and added collapse and expand icon changes

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 30px;
     background-color: rgb(43, 50, 64);
     color: white;
-    border-radius:8%;
+    border-radius:2%;
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
@@ -71,7 +71,7 @@ body {
 }
 
 .about-row {
-    padding: 3px 5px 3px 20px; 
+    padding: 3px 5px 3px 35px; 
     border-left: 1px solid rgb(73, 72, 62);
 }
 
@@ -137,6 +137,7 @@ body {
     text-align: left;
     outline: none;
     font-size: 15px;
+    display: none;
   }
   
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
@@ -156,7 +157,7 @@ body {
     display:flex;
     background-color: rgb(33, 38, 49);
     color: white;
-    border-radius:8%;
+    border-radius:2%;
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
@@ -174,11 +175,11 @@ body {
 
 .work-innerbox-left {
     padding-top: 30px;
-    padding-right:10px;
+    padding-right: 10px;
 }
 
 .work-innerbox-right {
-    border-radius:8%;
+    border-radius:2%;
     flex: 1;
     padding: 20px;
     background-color: rgb(43, 50, 64);
